--- a/index.html
+++ b/index.html
@@ -21,6 +21,32 @@
             </nav>
             <img src="Images/menu.png" class="menu-icon">
         </div>
+
+        <div class="row">
+            <div class="col">
+                <h1>Sahara</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, eligendi saepe. Necessitatibus nesciunt, distinctio, dolorum quas ea architecto qui rem blanditiis animi culpa minus suscipit eaque quam! Labore, voluptatum quidem.</p>
+                <button type="button">Explore</button>
+            </div>
+            <div class="col">
+                <div class="card card1">
+                    <h5>Western Desert</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+                <div class="card card2">
+                    <h5>AI Bagawat</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+                <div class="card card3">
+                    <h5>Pyramid of Gizat</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+                <div class="card card4">
+                    <h5>Kalahari Desert</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
